fix word wrapping in English

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,20 +9,23 @@ a:hover {
 
 h2 {
     text-align: justify;
-    overflow-wrap: anywhere;
-    word-break: break-all;
+    overflow-wrap: break-word;
+    word-break: normal;
+    hyphens: auto;
 }
 
 h3 {
     text-align: justify;
-    overflow-wrap: anywhere;
-    word-break: break-all;
+    overflow-wrap: break-word;
+    word-break: normal;
+    hyphens: auto;
 }
 
 p {
     text-align: justify;
-    overflow-wrap: anywhere;
-    word-break: break-all;
+    overflow-wrap: break-word;
+    word-break: normal;
+    hyphens: auto;
 }
 
 ul {
@@ -56,10 +59,15 @@ dt {
 
 dd {
     text-align: justify;
+    overflow-wrap: break-word;
+    word-break: normal;
+    hyphens: auto;
 }
 
 code {
     font-family: 'Fira Code', monospace;
+    hyphens: none;
+    white-space: pre-wrap;
 }
 
 hr {
@@ -567,6 +575,15 @@ hr {
 }
 
 .article-content {
+    li > ul > li > code,    // Added for nested unordered lists in ordered lists
+    li > ol > li > code {   // Added for nested ordered lists in ordered lists
+        background-color: hsla(0, 0%, 90%, 1.0);
+        padding: 0.2em;
+        border-radius: 4px;
+        hyphens: none;
+        white-space: pre-wrap;
+    }
+
     a {
         text-decoration: underline;
 
@@ -574,6 +591,8 @@ hr {
             background-color: hsla(0, 0%, 90%, 1.0);
             padding: 0.2em;
             border-radius: 4px;
+            hyphens: none;
+            white-space: pre-wrap;
         }
     }
 
@@ -694,6 +713,8 @@ hr {
             background-color: hsla(0, 0%, 90%, 1.0);
             padding: 0.2em;
             border-radius: 4px;
+            hyphens: none;
+            white-space: pre-wrap;
         }
     }
 
@@ -763,6 +784,8 @@ hr {
                 background-color: hsla(0, 0%, 90%, 1.0);
                 padding: 0.2em;
                 border-radius: 4px;
+                hyphens: none;
+                white-space: pre-wrap;
             }
         }
     }
@@ -787,13 +810,16 @@ hr {
         }
 
         > li {
-            overflow-wrap: anywhere;
-            word-break: break-all;
+            overflow-wrap: break-word;
+            word-break: normal;
+            hyphens: auto;
 
             > code {
                 background-color: hsla(0, 0%, 90%, 1.0);
                 padding: 0.2em;
                 border-radius: 4px;
+                hyphens: none;
+                white-space: pre-wrap;
             }
         }
     }
@@ -818,13 +844,16 @@ hr {
         }
 
         > li {
-            overflow-wrap: anywhere;
-            word-break: break-all;
+            overflow-wrap: break-word;
+            word-break: normal;
+            hyphens: auto;
 
             > code {
                 background-color: hsla(0, 0%, 90%, 1.0);
                 padding: 0.2em;
                 border-radius: 4px;
+                hyphens: none;
+                white-space: pre-wrap;
             }
         }
     }
